tests/baselines/reference/jsxFactoryMissingErrorInsideAClass.errors.txt
tests/cases/compiler/test.tsx(3,17): error TS2304: Cannot find name 'factory'.


==== tests/cases/compiler/test.tsx (1 errors) ====
    export class C {
        factory() {
            return <div></div>;
                    ~~~
!!! error TS2304: Cannot find name 'factory'.
        }
    }
    